@@ -9860,6 +9860,41 @@ AT_CHECK([fetch_column sb:Port_Binding options logical_port=public |grep -q 'qos
 AT_CLEANUP
 ])
 
+OVN_FOR_EACH_NORTHD_NO_HV([
+AT_SETUP([check OVN QoS mark/meter logical flows])
+AT_KEYWORDS([OVN-QoS])
+ovn_start
+
+check ovn-nbctl ls-add ls
+check ovn-nbctl qos-add ls from-lport 100 ip4 rate=100 burst=1000
+check ovn-nbctl qos-add ls from-lport 101 ip4 mark=15
+check ovn-nbctl qos-add ls from-lport 102 ip4 dscp=16
+check ovn-nbctl qos-add ls from-lport 103 ip4 dscp=17 mark=18
+
+check ovn-nbctl qos-add ls to-lport 100 ip4 rate=100 burst=1000
+check ovn-nbctl qos-add ls to-lport 101 ip4 mark=15
+check ovn-nbctl qos-add ls to-lport 102 ip4 dscp=16
+check ovn-nbctl qos-add ls to-lport 103 ip4 dscp=17 mark=18
+check ovn-nbctl --wait=sb sync
+
+AT_CHECK([ovn-sbctl lflow-list ls | grep qos | sed 's/table=../table=??/'], [0], [dnl
+  table=??(ls_in_qos_mark     ), priority=103  , match=(ip4), action=(ip.dscp = 17; pkt.mark = 18; next;)
+  table=??(ls_in_qos_mark     ), priority=102  , match=(ip4), action=(ip.dscp = 16; next;)
+  table=??(ls_in_qos_mark     ), priority=101  , match=(ip4), action=(pkt.mark = 15; next;)
+  table=??(ls_in_qos_mark     ), priority=0    , match=(1), action=(next;)
+  table=??(ls_in_qos_meter    ), priority=100  , match=(ip4), action=(set_meter(100, 1000); next;)
+  table=??(ls_in_qos_meter    ), priority=0    , match=(1), action=(next;)
+  table=??(ls_out_qos_mark    ), priority=103  , match=(ip4), action=(ip.dscp = 17; pkt.mark = 18; next;)
+  table=??(ls_out_qos_mark    ), priority=102  , match=(ip4), action=(ip.dscp = 16; next;)
+  table=??(ls_out_qos_mark    ), priority=101  , match=(ip4), action=(pkt.mark = 15; next;)
+  table=??(ls_out_qos_mark    ), priority=0    , match=(1), action=(next;)
+  table=??(ls_out_qos_meter   ), priority=100  , match=(ip4), action=(set_meter(100, 1000); next;)
+  table=??(ls_out_qos_meter   ), priority=0    , match=(1), action=(next;)
+])
+
+AT_CLEANUP
+])
+
 AT_SETUP([Tiered ACL logical flows])
 AT_KEYWORDS([acl])
 
@@ -11495,5 +11530,51 @@ check_engine_stats lflow recompute nocompute
 CHECK_NO_CHANGE_AFTER_RECOMPUTE
 
 OVN_CLEANUP([hv1])
+AT_CLEANUP
+])
+
+OVN_FOR_EACH_NORTHD_NO_HV([
+AT_SETUP([check QoS table configuration])
+ovn_start
+
+check ovn-nbctl ls-add lsw0
+check ovn-nbctl lsp-add lsw0 lp0
+check ovn-nbctl ls-add lsw1
+check ovn-nbctl --wait=hv lsp-add lsw1 lp1
+
+AT_CHECK([ovn-nbctl --wait=hv -- --id=@lp0-qos create QoS priority=100 action=dscp=48 match="inport\=\=\"lp0\"\ &&\ is_chassis_resident(\"lp0\")" direction="from-lport" -- set Logical_Switch lsw0 qos_rules=@lp0-qos],[0],[ignore])
+check_row_count nb:QoS 1
+
+AT_CHECK([ovn-nbctl --wait=hv -- --id=@lp1-qos create QoS priority=101 action=mark=49 match="inport\=\=\"lp1\"\ &&\ is_chassis_resident(\"lp1\")" direction="from-lport" -- set Logical_Switch lsw1 qos_rules=@lp1-qos],[0],[ignore])
+check_row_count nb:QoS 2
+
+AT_CHECK([ovn-nbctl list qos |grep -q dscp=48])
+AT_CHECK([ovn-nbctl list qos |grep -q mark=49])
+
+check ovn-nbctl qos-del lsw0
+check_row_count nb:QoS 1
+
+# check wrong dscp values
+AT_CHECK([ovn-nbctl --wait=hv -- --id=@lp0-qos create QoS priority=100 action=dscp=100 match="inport\=\=\"lp0\"\ &&\ is_chassis_resident(\"lp0\")" direction="from-lport" -- set Logical_Switch lsw0 qos_rules=@lp0-qos],[0],[ignore])
+AT_CHECK([ovn-sbctl dump-flows | grep -q dscp], [1])
+AT_CHECK([grep -q "Bad 'dscp' value 100" northd/ovn-northd.log])
+
+check ovn-nbctl qos-del lsw0
+check_row_count nb:QoS 1
+
+AT_CHECK([ovn-nbctl --wait=hv -- --id=@lp0-qos create QoS priority=100 action=dscp="-1" match="inport\=\=\"lp0\"\ &&\ is_chassis_resident(\"lp0\")" direction="from-lport" -- set Logical_Switch lsw0 qos_rules=@lp0-qos],[1],[ignore],[dnl
+ovn-nbctl: constraint violation: -1 is not in the valid range 0 to 4294967295 (inclusive)
+])
+check_row_count nb:QoS 1
+
+check ovn-nbctl qos-del lsw1
+check_row_count nb:QoS 0
+
+# check wrong mark value
+AT_CHECK([ovn-nbctl --wait=hv -- --id=@lp1-qos create QoS priority=101 action=mark="-2" match="inport\=\=\"lp1\"\ &&\ is_chassis_resident(\"lp1\")" direction="from-lport" -- set Logical_Switch lsw1 qos_rules=@lp1-qos],[1],[ignore],[dnl
+ovn-nbctl: constraint violation: -2 is not in the valid range 0 to 4294967295 (inclusive)
+])
+check_row_count nb:QoS 0
+
 AT_CLEANUP
 ])
